--- a/site/servitronic.html
+++ b/site/servitronic.html
@@ -28,7 +28,7 @@
 <body>
     <header id="top">
         <div class="llamenos"  >
-            <span>Llámenos hoy <a href="tel:1127043091">11-2704-3091</a></span>
+            <span>Llámenos hoy <a href="tel:+5491127398088">11-2704-3091</a></span>
             
             <div class="hamburger hamburger--elastic">
                 <div class="hamburger-box">
@@ -293,12 +293,9 @@ a tus requerimientos.
                 <div class="flex EnTuHogar"><span>EN TÚ HOGAR</span></div>
                 <img class="otherBrandsImgs" src="./public/images/imIqk4qF2eygJQUGAHuPjbIR38nb78HKnmToj-bn6IrWdG_4z2dT0_xozjRAvMQO2A19uVxrPVfK-bP_KyaVQP90xO_bzTaZ.jpg" alt="">
                 <img class="otherBrandsImgs" src="./public/images/address-img.png" alt="">
-<<<<<<< HEAD
-=======
 
 
             </div>
->>>>>>> 4233978f266e339f29a19eee60c303fe9a4a4a45
             </section>
         </section>
         <div class="background-services">
@@ -421,10 +418,11 @@ a tus requerimientos.
 <footer>
     <div class="footer-divs" style="padding-top: 20px;">
     <a href="#top" id="logo-footer"><img src="./public/images/Group 6991whiteServitronic.svg" alt="Servitronic footer"></a>
-    <span id="llamenos">Llámenos hoy <a href="https://api.whatsapp.com/send?phone=541157412030">11-3526-4499</a></span>
+    
+    <span id="llamenos">Llámenos hoy <a href="tel:+5491127398088">11-2739-8088</a></span>
 </div>
-<hr style="width: 65%;">
-<div class="footer-divs" style="padding-bottom: 20px; font-weight: lighter;">
+<hr id="hr-footer" style="width: 65%;">
+<div class="footer-divs" id="div-bot" style="padding-bottom: 20px; font-weight: lighter;">
     <p>© 2021 Viajero Estudio</p>
     <div style="display: flex;">
         <p>PRIVACY POLICY</p><p style="margin-left: 15px;">TERMS OF SERVICE</p>
