--- a/site/servitronic.html
+++ b/site/servitronic.html
@@ -224,7 +224,7 @@ a tus requerimientos.
                     <hr class="mobileHr" style="width: 22px; border:1px solid black">
                     <small class="tituloDeMarcas">SMEG</small>
                     <figure>
-                        <img class="importantBrandsImg" src="./public/images/smeg.jpg" alt="">
+                        <img class="importantBrandsImg" src="./public/images/fotosNuevas/smeg.jpg" alt="">
                     </figure>
                     <div class="desktopAcomodo">
                         <hr class="desktopHr" style="width: 22px; border:1px solid black">
@@ -237,7 +237,7 @@ a tus requerimientos.
                     <hr class="mobileHr" style="width: 22px; border:1px solid black">
                     <small class="tituloDeMarcas">ARISTON</small>
                     <figure>
-                        <img class="importantBrandsImg" src="./public/images/ariston.png" alt="">
+                        <img class="importantBrandsImg" src="./public/images/fotosNuevas/ariohtfyo m.jpg" alt="">
                     </figure>
                     <div class="desktopAcomodo">
                         <hr class="desktopHr" style="width: 22px; border:1px solid black">
@@ -253,7 +253,7 @@ a tus requerimientos.
                     <hr class="mobileHr" style="width: 22px; border:1px solid black">
                     <small class="tituloDeMarcas">CATA</small>
                     <figure>
-                        <img class="importantBrandsImg" src="./public/images/Cata.png" alt="">
+                        <img class="importantBrandsImg" src="./public/images/fotosNuevas/cata.jpg" alt="">
                     </figure>
                     <div class="desktopAcomodo"> 
                         <hr class="desktopHr" style="width: 22px; border:1px solid black">
@@ -265,7 +265,7 @@ a tus requerimientos.
                     <hr class="mobileHr" style="width: 22px; border:1px solid black">
                     <small class="tituloDeMarcas">GLEM</small>
                     <figure>
-                        <img class="importantBrandsImg" src="./public/images/glem.png" alt="">
+                        <img class="importantBrandsImg" src="./public/images/fotosNuevas/glem.jpg" alt="">
                         
                     </figure>
                     <div class="desktopAcomodo"> 
@@ -310,18 +310,18 @@ a tus requerimientos.
                         </marquee>
                     </div>
                </div>
-               <div class="column img"><img src="./public/images/address-img.png"></div>
-               <div class="column img"><img src="./public/images/address-img.png"></div>
-               <div class="column img"><img src="./public/images/address-img.png"></div>
+               <div class="column img"><img src="./public/images/fotosNuevas/arasda.jpg"></div>
+               <div class="column img"><img src="./public/images/fotosNuevas/ariohtfyo m.jpg"></div>
+               <div class="column img"><img src="./public/images/fotosNuevas/balay.jpg"></div>
                <div class="row two"> <img src="./public/prueba1-removebg-preview.png"></div>
-               <div class="column img"><img src="./public/images/address-img.png"></div>
-               <div class="column img"><img src="./public/images/address-img.png"></div>
-               <div class="column img"><img src="./public/images/address-img.png"></div>
-               <div class="column img"><img src="./public/images/address-img.png"></div>
-               <div class="column img"><img src="./public/images/address-img.png"></div>
+               <div class="column img"><img src="./public/images/fotosNuevas/LEB.jpg"></div>
+               <div class="column img"><img src="./public/images/fotosNuevas/bompani.jpg"></div>
+               <div class="column img"><img src="./public/images/fotosNuevas/candy.jpg"></div>
+               <div class="column img"><img src="./public/images/fotosNuevas/cata.jpg"></div>
+               <div class="column img"><img src="./public/images/fotosNuevas/framke.jpg"></div>
                
-               <div class="column img"><img src="./public/images/address-img.png"></div>    
-               <div class="column img"><img src="./public/images/address-img.png"></div>  
+               <div class="column img"><img src="./public/images/fotosNuevas/glem.jpg"></div>    
+               <div class="column img"><img src="./public/images/fotosNuevas/bobbani.jpg"></div>  
                <div class="colum marquee">
                 <div class="marque">
                     <marquee class="marquesina"> 
