--- a/site/servitronic.html
+++ b/site/servitronic.html
@@ -280,19 +280,17 @@ a tus requerimientos.
             </section> 
             
             <section class="otherBrands">
-                <img class="otherBrandsImgs" src="./public/images/images (1).png" alt="">
-                <img class="otherBrandsImgs" src="./public/images/balay logo.png" alt="">
-                <img class="otherBrandsImgs" src="./public/images/candy.svg" alt="">
-                <img class="otherBrandsImgs" src="./public/images/Cata.png" alt="">
-                <div class="flex Servicio"><span>SERVICIO</span><hr></div>
-                <img class="otherBrandsImgs" src="./public/images/entity953_square_WqzG59b.png" alt="">
-                <img class="otherBrandsImgs" src="./public/images/horno-electrico-8-funciones-60-cm-touch-bompani-italiano-D_NQ_NP_882630-MLA31624821640_072019-F_ecd61c47-3eb4-4a89-ba78-30e37aace580_1280x.jpg" alt="">
-                <div class="flex Oficial"><hr><span>OFICIAL</span></div>
-                <img class="otherBrandsImgs" src="./public/images/images (3).png" alt="">
-                <img class="otherBrandsImgs" src="./public/images/images.jpg" alt="">
+                <img class="otherBrandsImgs" src="./public/images/fotosNuevas/arasda.jpg" alt="">
+                <img class="otherBrandsImgs" src="./public/images/fotosNuevas/balay.jpg" alt="">
+                <img class="otherBrandsImgs" src="./public/images/fotosNuevas/bompani.jpg" alt="">
+                <img class="otherBrandsImgs" src="./public/images/fotosNuevas/candy.jpg" alt="">
+                <div class="flex Servicio"><span>SERVICIO OFICIAL</span></div>
+                <img class="otherBrandsImgs" src="./public/images/fotosNuevas/framke.jpg" alt="">
+                <img class="otherBrandsImgs" src="./public/images/fotosNuevas/LEB.jpg" alt="">
+                <img class="otherBrandsImgs" src="./public/images/fotosNuevas/SAM.jpg" alt="">
+                <img class="otherBrandsImgs" src="./public/images/fotosNuevas/whirlpool.jpg" alt="">
                 <div class="flex EnTuHogar"><span>EN TÚ HOGAR</span></div>
-                <img class="otherBrandsImgs" src="./public/images/imIqk4qF2eygJQUGAHuPjbIR38nb78HKnmToj-bn6IrWdG_4z2dT0_xozjRAvMQO2A19uVxrPVfK-bP_KyaVQP90xO_bzTaZ.jpg" alt="">
-                <img class="otherBrandsImgs" src="./public/images/address-img.png" alt="">
+                
 
 
             </div>
