--- a/site/servitronic.html
+++ b/site/servitronic.html
@@ -203,10 +203,10 @@ a tus requerimientos.
                 </div>
                 
                 <div class="imagenLogo">
-                    <div class="stickyLogo">
+                    <div class="stickyLogo" style="display: none;">
                         <img src="./public/images/Group7031LogoMobile.png" alt="">
                     </div>
-                 <img class="imgDesktop" src="./public/images/bordeimg.png" alt=""> 
+                 <img class="imgDesktop" src="./public/images/aside-img.png" alt=""> 
             </div>
             </div>
 
