estilos a la clase estamos , se le cambio el tamaño de la letra , espaciado

--- a/site/servitronic.html
+++ b/site/servitronic.html
@@ -193,7 +193,7 @@ a tus requerimientos.
                     que pudieran <br> presentarse en los <br> electrodomésticos <br>
                     y equipamientos <br>
                     de tu hogar. <br>
-                    Nos alegra llevar <br> soluciones a tus <br> problemas cotidianos.
+                    Nos alegra llevar <br> soluciones a tus <br> problemas cotidianos.<br>
                     <strong class="strong-desktop">¡Gracias por elegirnos!</strong></span>
                      </p>
                  <img class="imgMobile" src="./public/images/Frame 8.png" alt="" width="100%">
