--- a/site/servitronic.html
+++ b/site/servitronic.html
@@ -356,7 +356,7 @@ a tus requerimientos.
                     <input type="hidden" name="apikey" value="06a2824b-2ca5-4124-bfb3-618b4436f1d8">
                     <input type="hidden" name="subject" value="New Submission from Web3Forms">
                     <input type="checkbox" name="botcheck" id="" style="display: none;">
-                ​
+                
                     <!-- Custom Form Data -->
                     
                     <input id="name"  type="text" name="nombre" class="inputName" placeholder="Nombre">
@@ -364,7 +364,7 @@ a tus requerimientos.
                     <input id="email" type="email"  name="email" class="" placeholder="Correo electrónico">
                      <textarea id="msg" name="textarea" cols="30" rows="10"  style="resize:none" placeholder="Consulta"></textarea>
                     <button type="submit" id="btnSubmit" class="btnFormSubmit">ENVIAR</button>
-                    <div id="result"></div>   ​
+                    <div id="result"></div>   
             </form> 
         </div>
         <aside class="asideContact">
