Linkeado marcas navbar

--- a/site/servitronic.html
+++ b/site/servitronic.html
@@ -184,7 +184,7 @@ a tus requerimientos.
                         <p class="textBox" style="font-size: 22px;">
                             Contamos con las <br> herramientas y el <br> equipamiento necesario para <br> responder a tus solicitudes.
                         </p>    
-                        <hr class="hrDesktop">
+                        <hr class="hrDesktop" >
                      </article>
                  </div>
                  <div class="estamosText">
@@ -211,8 +211,8 @@ a tus requerimientos.
             </div>
 
        </section>
-        <section class="gridBrands">
-            <section class="brandsTitleDesktop">
+        <section class="gridBrands" id="marcas">
+            <section class="brandsTitleDesktop" >
              <img class="imgitulomarcad" src="./public/images/mARCAS222.png" alt="">
             </section>
             <section class="brandsTitle">
