--- a/site/servitronic.html
+++ b/site/servitronic.html
@@ -65,7 +65,7 @@
     <main>
         <div class="boton-wsp" >
         <a class="logoWsp" href="https://api.whatsapp.com/send?phone=1127043091" target="_blank">
-            <lottie-player src="https://assets9.lottiefiles.com/packages/lf20_dyf5lscb.json"  background="transparent"  speed="1"  style="width: 60px; height: 60px;"  loop  autoplay></lottie-player>
+            <lottie-player src="https://assets9.lottiefiles.com/packages/lf20_dyf5lscb.json"  background="transparent"  speed="1" class="tamanio-wsp" loop  autoplay></lottie-player>
           </a>
         </div>
         <div class="wppButton"></div>
