fix img, contact form, some issues

--- a/site/servitronic.html
+++ b/site/servitronic.html
@@ -304,7 +304,8 @@ a tus requerimientos.
             </div>
             </section>
         </section>
-        <div class="background-services">
+        <div class="background-top">
+        </div>  
             <div class="desktop-service">
                <div class="column one">
                    <div class="marque">
@@ -339,7 +340,9 @@ a tus requerimientos.
                  </div>
                </div> 
             </div>
-            </div>
+        <div class='background-services'>
+        </div>
+        
     <div >
         <img id="contacto"  src="" alt="">
         <div >
