fix logo servitronic

--- a/site/servitronic.html
+++ b/site/servitronic.html
@@ -320,7 +320,7 @@ a tus requerimientos.
                <div class="column img"><img src="./public/images/fotosNuevas/arasda.jpg"></div>
                <div class="column img"><img src="./public/images/fotosNuevas/ariohtfyo m.jpg"></div>
                <div class="column img"><img src="./public/images/fotosNuevas/balay.jpg"></div>
-               <div class="row two"> <img src="./public/prueba1-removebg-preview.png"></div>
+               <div class="row two logo-mobile-servi"> <img src="./public/prueba1-removebg-preview.png"></div>
                <div class="column img"><img src="./public/images/fotosNuevas/LEB.jpg"></div>
                <div class="column img"><img src="./public/images/fotosNuevas/bompani.jpg"></div>
                <div class="column img"><img src="./public/images/fotosNuevas/candy.jpg"></div>
